<resources>
    <string name="app_name" translatable="false">Golem.de</string>
    <string name="action_refresh">Refresh</string>
    <string name="refresh_success">Successfully refreshed articles</string>
    <string name="refresh_error_undefined">Error while refreshing articles</string>
    <string name="refresh_error_connection">No connection while refreshing articles</string>
    <string name="refresh_error_timeout">Timeout while refreshing articles</string>
    <string name="refresh_error_invalid_abo">Invalid subscription key, can\'t refresh</string>
    <string name="article_published">Published on %s</string>
    <string name="golem_title" translatable="false">golem.de</string>
    <string name="action_share">Share</string>
    <string name="shareAppText">Try this App for reading golem.de: %s</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="error_database">Unexpected error on opening Database</string>

    <!-- Settings -->
    <string name="pref_article_limit">Article Limit</string>
    <string name="pref_article_limit_sum">Number of Articles that should be kept for history.</string>
    <string name="pref_article_refresh">Refresh Interval (Minutes)</string>
    <string name="pref_article_refresh_sum">Articles are refreshed periodically when the app is opened</string>
    <string name="pref_data_title" translatable="false">SYNC</string>
    <string name="pref_abo_title">GOLEM PUR</string>
    <string name="pref_has_abo">Use Golem Pur</string>
    <string name="pref_abo_key" translatable="false">Golem Pur Token</string>
    <string name="pref_abo_key_sum">Add your Token here. It is required to access the ad-free fulltext feed.</string>
    <string name="action_open_webbrowser">Open in Browser</string>
    <string name="setting_contact" translatable="false">INFO</string>
    <string name="how_to_key">Golem.de Pur Account</string>
    <string name="how_to_key_content">You can find your RSS-feed token here under Fulltext-RSS-Feed. The characters after \"http://rss.golem.de/rss_sub.php?token=\" make up your token.</string>
    <string name="pref_contact_title">Contact</string>
    <string name="privacy_sum">Click here to open our Data Privacy Policy</string>
    <string name="privacy_title">Data Privacy Policy</string>
    <string name="err_no_network">Sorry, this article is not available offline.</string>
    <string name="golem_token_reset">Your golem token has been reset</string>
    <string name="articles">Article(s)</string>
    <string name="minutes">Minute(s)</string>
    <string name="pref_access">Accessibility</string>
    <string name="pref_text_zoom">Font size</string>
    <string name="pref_zoom_larger">Larger</string>
    <string name="pref_zoom_normal">Normal</string>
    <string name="pref_zoom_smaller">Smaller</string>
    <string name="choose_layout">Choose Layout</string>
    <string name="choose_layout_content">Choose whether the desktop or mobile layout should be opened</string>
    <string name="pref_beta_title">Join beta</string>
    <string name="pref_beta_sum">To join our beta click here</string>
    <string name="choose_share_article">Share article with…</string>
    <string name="choose_share_app">Share app with…</string>
    <string name="welcome_head">Thank you…</string>
    <string name="welcome_text">For using this Golem.de Reader!

        I always try to enhance this app. If you have any wishes let me know.
    </string>
    <string name="welcome_text2">If you like what I did, I would really appreciate it if you rate this app in the app store. If not, let me know!</string>
    <string name="welcome_text3" translatable="false">Sönke</string>
    <string name="take_me_to_store">Take me to the App Store</string>
    <string name="write_a_mail">Mail me!</string>
    <string name="sendMail">Write an E-Mail</string>
    <string name="mobileViewTippText">Golem.de shows the desktop layout for Tablets at this size. You can fix this issue by choosing the \"Mobile Layout\".</string>
    <string name="action_open_comments">Open Forum in Browser</string>
    <string name="teaser_img_desc">Teaser image of article</string>

    <string name="how_to_darkmode">Dark Mode</string>
    <string name="how_to_darkmode_content">With a Pur Account, you can choose Dark Mode for Golem.de\'s online content</string>
    <string name="pref_github_title" translatable="false">Github</string>
    <string name="pref_github_sum">This is not an official golem.de App. If you want to report a bug or have any ideas for improving this application just click here to open our github repository</string>
    <string name="action_settings">Settings</string>
    <string name="pref_contact_sum">Drop me a mail with feedback at projekte@eknoes.de</string>

    <string name="filter_view_golem">Open Golem.de Articles</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_summary">Show third party licenses</string>
    <string name="pref_imprint_title">Imprint of Golem.de</string>
    <string name="pref_imprint_desc">Show contact and legal information of Golem.de</string>

    <string name="open_browser">Select a browser</string>
    <string name="action_imprint">Golem.de Contact</string>
    <string name="synchronize_only_if_wi_fi_is_available">Synchronize with Wi-Fi only</string>
    <string name="if_enabled_articles_will_be_synchronized_only_when_wi_fi_is_available">If enabled, articles will only be synchronized at startup when Wi-Fi is available.</string>
    <string name="force_dark_mode">Force Dark-Mode (experimental)</string>
    <string name="force_dark_mode_title">Force Dark-Mode</string>
</resources>
