<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">
<PreferenceCategory
        app:title="@string/pref_data_title">
        <com.pavelsikun.seekbarpreference.SeekBarPreference
                app:key="article_limit"
                app:title="@string/pref_article_limit"
                app:summary="@string/pref_article_limit_sum"
                app:contentDescription="@string/pref_article_limit_sum"
                app:defaultValue="50"
                app:msbp_minValue="0"
                app:msbp_maxValue="200"
                app:msbp_interval="1"
                app:msbp_measurementUnit="@string/articles"/>

        <com.pavelsikun.seekbarpreference.SeekBarPreference
                app:key="refresh_limit"
                app:title="@string/pref_article_refresh"
                app:summary="@string/pref_article_refresh_sum"
                app:contentDescription="@string/pref_article_refresh_sum"
                app:defaultValue="5"
                app:msbp_minValue="0"
                app:msbp_maxValue="60"
                app:msbp_interval="1"
                app:msbp_measurementUnit="@string/minutes"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/pref_access">
        <Preference
                app:key="choose_layout"
                app:title="@string/choose_layout"
                app:summary="@string/choose_layout_content">
        </Preference>

    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/pref_abo_title">
        <Preference
                app:key="how_to_key"
                app:title="@string/how_to_key"
                app:summary="@string/how_to_key_content">
        </Preference>
        <SwitchPreferenceCompat
                app:key="has_abo"
                app:title="@string/pref_has_abo"
                app:defaultValue="false"/>
        <EditTextPreference
                app:key="abo_key"
                app:dependency="has_abo"
                app:title="@string/pref_abo_key"
                app:summary="@string/pref_abo_key_sum"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/setting_contact">
        <Preference
                app:key="start_contact"
                app:title="@string/pref_contact_title"
                app:summary="@string/pref_contact_sum">
        </Preference>
        <Preference
                app:key="join_beta"
                app:title="@string/pref_beta_title"
                app:summary="@string/pref_beta_sum">
        </Preference>
        <Preference
                app:key="privacy"
                app:title="@string/privacy_title"
                app:summary="@string/privacy_sum">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
